test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_singleton_struct_type.draco
struct {int a1;} a;

proc main() void : a := 0; corp;
