test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_empty_struct_type.draco
struct {} a;

proc main() void : a := 0; corp;
